--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="MyOwnMocker : Online mock server">
+    <meta name="description" content="MyOwnMocker : Online Mock Server">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/fopina/myownmocker">View on GitHub</a>
 
           <h1 id="project_title">MyOwnMocker</h1>
-          <h2 id="project_tagline">Online mock server</h2>
+          <h2 id="project_tagline">Online Mock Server</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/fopina/myownmocker/zipball/master">Download this project as a .zip file</a>
@@ -145,7 +145,7 @@ Example (using token and path created in <code>register</code>and <code>setup</c
 <h2>
 <a id="setting-up-your-own-copy-of-mom" class="anchor" href="#setting-up-your-own-copy-of-mom" aria-hidden="true"><span class="octicon octicon-link"></span></a>Setting up your own copy of MOM</h2>
 
-<p>Using heroku cli, settings your own copy is as easy as:</p>
+<p>Using <a href="https://devcenter.heroku.com/articles/heroku-command">Heroku CLI</a>, setting your own copy is as easy as:</p>
 
 <pre><code>$ git clone https://github.com/fopina/myownmocker
 Cloning into 'myownmocker'...
