--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
 <h2>
 <a id="overview" class="anchor" href="#overview" aria-hidden="true"><span class="octicon octicon-link"></span></a>Overview</h2>
 
+<p><a href="https://travis-ci.org/fopina/myownmocker"><img src="https://travis-ci.org/fopina/myownmocker.svg" alt="Build Status"></a></p>
+
 <ol>
 <li>
 <a href="#api">API</a>
