--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <h2>
 <a id="overview" class="anchor" href="#overview" aria-hidden="true"><span class="octicon octicon-link"></span></a>Overview</h2>
 
-<p><a href="https://travis-ci.org/fopina/myownmocker"><img src="https://travis-ci.org/fopina/myownmocker.svg" alt="Build Status"></a></p>
+<p><a href="https://travis-ci.org/fopina/myownmocker"><img src="https://travis-ci.org/fopina/myownmocker.svg" alt="Build Status"></a> <a href="https://coveralls.io/github/fopina/myownmocker?branch=master"><img src="https://coveralls.io/repos/github/fopina/myownmocker/badge.svg?branch=master" alt="Coverage Status"></a></p>
 
 <ol>
 <li>
